Fix user layout problem with adaptive columns

--- a/files/app/resource/css/user.css
+++ b/files/app/resource/css/user.css
@@ -177,6 +177,7 @@ body.authenticated .ctrl:hover
 #c2c3
 {
     display: flex;
+    flex: 9;
 }
 #c2
 {
